traefik/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8sapp
  labels:
    app: k8sapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8sapp
  template:
    metadata:
      labels:
        app: k8sapp
    spec:
      containers:
      - name: k8sapp
        image: craftslab/k8sapp:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "1000m"
            memory: "1Gi"
          limits:
            cpu: "2000m"
            memory: "2Gi"

---
apiVersion: v1
kind: Service
metadata:
  name: k8sapp-svc
spec:
  selector:
    app: k8sapp
  ports:
  - name: web
    port: 80
    protocol: TCP
