traefik/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k8sdemo-svc-ingress-route
  namespace: default
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`k8sdemo.io`)
    kind: Rule
    services:
    - name: k8sdemo-svc
      port: 80
